# TMHP

./: .buildinfo  .gitignore  404.html  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/pbhp/: air_source_heat_pump.html  air_source_heat_pump_boiler.html  ashpb_pv_ess.html  ashpb_stc_preheat.html  ashpb_stc_tank.html  calc_util.html  cop.html  dhw.html  dynamic_context.html  enex_functions.html  g_function.html  ground_source_heat_pump.html  ground_source_heat_pump_boiler.html  gshpb_pv_ess.html  gshpb_stc_preheat.html  gshpb_stc_tank.html  heat_transfer.html  hx_fan.html  mollier_diagram.html  refrigerant.html  simulation_summary.html  subsystems.html  thermodynamics.html  uv_treatment.html  water_source_heat_pump_boiler.html  weather.html
_modules/physics_hp/: air_source_heat_pump.html  air_source_heat_pump_boiler.html  ashpb_pv_ess.html  ashpb_stc_preheat.html  ashpb_stc_tank.html  calc_util.html  cop.html  dhw.html  dynamic_context.html  enex_functions.html  g_function.html  ground_source_heat_pump.html  ground_source_heat_pump_boiler.html  gshpb_pv_ess.html  gshpb_stc_preheat.html  gshpb_stc_tank.html  heat_transfer.html  hx_fan.html  mollier_diagram.html  refrigerant.html  simulation_summary.html  subsystems.html  thermodynamics.html  uv_treatment.html  water_source_heat_pump_boiler.html  weather.html
_modules/tmhp/: air_source_heat_pump.html  air_source_heat_pump_boiler.html  ashpb_pv_ess.html  ashpb_stc_preheat.html  ashpb_stc_tank.html  calc_util.html  compressor_envelope.html  cop.html  dhw.html  dynamic_context.html  enex_functions.html  g_function.html  ground_coupling.html  ground_source_heat_pump.html  ground_source_heat_pump_boiler.html  gshp_empirical.html  gshpb_pv_ess.html  gshpb_stc_ground.html  gshpb_stc_preheat.html  gshpb_stc_routed.html  gshpb_stc_tank.html  heat_transfer.html  hx_fan.html  hybrid_tank.html  mollier_diagram.html  refrigerant.html  simulation_summary.html  stratified_tank.html  subsystems.html  thermodynamics.html  uv_treatment.html  water_source_heat_pump_boiler.html  weather.html
_sources/: index.rst.txt
_sources/api/: index.rst.txt  models.rst.txt  support.rst.txt
_sources/getting-started/: installation.rst.txt  quickstart.rst.txt
_static/css/: custom.css  integration-diagrams.css
_static/data/: glossary.json  timeseries-24h.json  validation-points.json
_static/html/: cycle_widget.html
_static/widgets/: cycle_data.json
api/: index.html  models.html  support.html
api/models/: ashpb.html  gshpb.html  index.html  space-conditioning.html  wshpb.html
api/support/: demand-weather.html  heat-transfer.html  index.html  integrations.html  refrigerant-thermo.html  simulation.html  subsystems.html  utilities.html  visualization.html
concepts/: cycle-architecture.html  failure-reason-semantics.html  index.html  refrigerant-and-coolprop.html  why-physics-based.html
docs/: Makefile
docs/solar_routing/: compare_routing_policies.py  solar_routing.md
getting-started/: first-dynamic-simulation.html  index.html  installation.html  quickstart.html
integrations/: energyplus-python.html  fmu.html  index.html
models/: ashp.html  ashpb.html  gshp.html  gshpb.html  index.html  wshpb.html
scripts/: __init__.py
tests/: __init__.py  _step_scenarios.py  test_air_source_heat_pump_boiler_cond_hx.py  test_ci_workflow_acceleration.py  test_docs_alignment.py  test_docs_build_acceleration.py  test_docs_examples.py  test_energyplus_plugin.py  test_equipment_presets.py  test_fmi_common.py  test_fmu3_adapter.py  test_fmu_adapter.py  test_ground_coupling.py  test_hybrid_tank.py  test_imports.py  test_models_smoke.py  test_stc_ground.py  test_stc_routed.py  test_stc_tank_pump_control.py  test_step_kernel.py  test_stratified_tank.py  test_tank_backend.py
tutorials/: compose-subsystems.html  index.html  realistic-dynamic-simulation.html  swap-refrigerant.html  visualize-the-cycle.html
validation/: index.html
(+135 files in other folders)
